packages/web/src/index.css
/* biome-ignore-all lint/suspicious/noUnknownAtRules: tailwind */

@import url("https://fonts.googleapis.com/css2?family=Delius&display=swap");
@import "tailwindcss";

@plugin "tailwindcss-animate";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);
    --font-sans: Delius;
    --font-mono: monospace;
    --font-serif: serif;
    --radius: 0.5rem;
    --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
    --tracking-tight: calc(var(--tracking-normal) - 0.025em);
    --tracking-wide: calc(var(--tracking-normal) + 0.025em);
    --tracking-wider: calc(var(--tracking-normal) + 0.05em);
    --tracking-widest: calc(var(--tracking-normal) + 0.1em);
    --tracking-normal: var(--tracking-normal);
    --shadow-2xl: var(--shadow-2xl);
    --shadow-xl: var(--shadow-xl);
    --shadow-lg: var(--shadow-lg);
    --shadow-md: var(--shadow-md);
    --shadow: var(--shadow);
    --shadow-sm: var(--shadow-sm);
    --shadow-xs: var(--shadow-xs);
    --shadow-2xs: var(--shadow-2xs);
    --spacing: var(--spacing);
    --letter-spacing: var(--letter-spacing);
    --shadow-offset-y: var(--shadow-offset-y);
    --shadow-offset-x: var(--shadow-offset-x);
    --shadow-spread: var(--shadow-spread);
    --shadow-blur: var(--shadow-blur);
    --shadow-opacity: var(--shadow-opacity);
    --color-shadow-color: var(--shadow-color);
    --color-destructive-foreground: var(--destructive-foreground);
}

:root {
    --radius: 0.5rem;
    --background: oklch(0.889 0.0389 262.9192);
    --foreground: oklch(0.322 0.0319 267.2063);
    --card: oklch(0.9339 0.0213 268.4282);
    --card-foreground: oklch(0.322 0.0319 267.2063);
    --popover: oklch(0.9339 0.0213 268.4282);
    --popover-foreground: oklch(0.322 0.0319 267.2063);
    --primary: oklch(0.473 0.2054 299.6368);
    --primary-foreground: oklch(1 0 0);
    --secondary: oklch(0.4994 0.284 274.8755);
    --secondary-foreground: oklch(1 0 0);
    --muted: oklch(0.9339 0.0213 268.4282);
    --muted-foreground: oklch(0.5812 0.0499 268.302);
    --accent: oklch(0.9022 0.0353 271.5586);
    --accent-foreground: oklch(0.322 0.0319 267.2063);
    --destructive: oklch(0.6137 0.2039 25.5645);
    --border: oklch(0.8263 0.0476 266.6432);
    --input: oklch(0.8263 0.0476 266.6432);
    --ring: oklch(0.7045 0.076 266.482);
    --chart-1: oklch(0.7045 0.076 266.482);
    --chart-2: oklch(0.7818 0.0579 265.1304);
    --chart-3: oklch(0.8579 0.041 262.2758);
    --chart-4: oklch(0.767 0.0595 262.2426);
    --chart-5: oklch(0.6433 0.0925 268.0937);
    --sidebar: oklch(0.9339 0.0213 268.4282);
    --sidebar-foreground: oklch(0.322 0.0319 267.2063);
    --sidebar-primary: oklch(0.7045 0.076 266.482);
    --sidebar-primary-foreground: oklch(1 0 0);
    --sidebar-accent: oklch(0.9022 0.0353 271.5586);
    --sidebar-accent-foreground: oklch(0.322 0.0319 267.2063);
    --sidebar-border: oklch(0.8263 0.0476 266.6432);
    --sidebar-ring: oklch(0.7045 0.076 266.482);
    --destructive-foreground: oklch(1 0 0);
    --font-sans: Delius;
    --font-serif: serif;
    --font-mono: monospace;
    --shadow-color: #8a9fd0;
    --shadow-opacity: 0.1;
    --shadow-blur: 8px;
    --shadow-spread: 0px;
    --shadow-offset-x: 0px;
    --shadow-offset-y: 4px;
    --letter-spacing: 0rem;
    --spacing: 0.25rem;
    --shadow-2xs: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.05);
    --shadow-xs: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.05);
    --shadow-sm: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.1), 0px 1px 2px -1px hsl(222 42.6829% 67.8431% / 0.1);
    --shadow: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.1), 0px 1px 2px -1px hsl(222 42.6829% 67.8431% / 0.1);
    --shadow-md: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.1), 0px 2px 4px -1px hsl(222 42.6829% 67.8431% / 0.1);
    --shadow-lg: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.1), 0px 4px 6px -1px hsl(222 42.6829% 67.8431% / 0.1);
    --shadow-xl: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.1), 0px 8px 10px -1px hsl(222 42.6829% 67.8431% / 0.1);
    --shadow-2xl: 0px 4px 8px 0px hsl(222 42.6829% 67.8431% / 0.25);
    --tracking-normal: 0rem;
}

.dark {
    --background: oklch(0.2339 0.0255 274.216);
    --foreground: oklch(0.9339 0.0213 268.4282);
    --card: oklch(0.2819 0.0355 274.7479);
    --card-foreground: oklch(0.9339 0.0213 268.4282);
    --popover: oklch(0.2819 0.0355 274.7479);
    --popover-foreground: oklch(0.9339 0.0213 268.4282);
    --primary: oklch(0.7045 0.076 266.482);
    --primary-foreground: oklch(0.2339 0.0255 274.216);
    --secondary: oklch(0.3819 0.0505 273.3708);
    --secondary-foreground: oklch(0.9339 0.0213 268.4282);
    --muted: oklch(0.3819 0.0505 273.3708);
    --muted-foreground: oklch(0.7818 0.0579 265.1304);
    --accent: oklch(0.4568 0.0619 272.1542);
    --accent-foreground: oklch(0.9339 0.0213 268.4282);
    --destructive: oklch(0.6137 0.2039 25.5645);
    --border: oklch(0.3819 0.0505 273.3708);
    --input: oklch(0.3819 0.0505 273.3708);
    --ring: oklch(0.7045 0.076 266.482);
    --chart-1: oklch(0.7045 0.076 266.482);
    --chart-2: oklch(0.7818 0.0579 265.1304);
    --chart-3: oklch(0.8579 0.041 262.2758);
    --chart-4: oklch(0.767 0.0595 262.2426);
    --chart-5: oklch(0.6433 0.0925 268.0937);
    --sidebar: oklch(0.2819 0.0355 274.7479);
    --sidebar-foreground: oklch(0.9339 0.0213 268.4282);
    --sidebar-primary: oklch(0.7045 0.076 266.482);
    --sidebar-primary-foreground: oklch(0.2339 0.0255 274.216);
    --sidebar-accent: oklch(0.4568 0.0619 272.1542);
    --sidebar-accent-foreground: oklch(0.9339 0.0213 268.4282);
    --sidebar-border: oklch(0.3819 0.0505 273.3708);
    --sidebar-ring: oklch(0.7045 0.076 266.482);
    --destructive-foreground: oklch(1 0 0);
    --radius: 0.5rem;
    --font-sans: Delius;
    --font-serif: serif;
    --font-mono: monospace;
    --shadow-color: #000000;
    --shadow-opacity: 0.2;
    --shadow-blur: 8px;
    --shadow-spread: 0px;
    --shadow-offset-x: 0px;
    --shadow-offset-y: 4px;
    --letter-spacing: 0rem;
    --spacing: 0.25rem;
    --shadow-2xs: 0px 4px 8px 0px hsl(0 0% 0% / 0.1);
    --shadow-xs: 0px 4px 8px 0px hsl(0 0% 0% / 0.1);
    --shadow-sm: 0px 4px 8px 0px hsl(0 0% 0% / 0.2), 0px 1px 2px -1px hsl(0 0% 0% / 0.2);
    --shadow: 0px 4px 8px 0px hsl(0 0% 0% / 0.2), 0px 1px 2px -1px hsl(0 0% 0% / 0.2);
    --shadow-md: 0px 4px 8px 0px hsl(0 0% 0% / 0.2), 0px 2px 4px -1px hsl(0 0% 0% / 0.2);
    --shadow-lg: 0px 4px 8px 0px hsl(0 0% 0% / 0.2), 0px 4px 6px -1px hsl(0 0% 0% / 0.2);
    --shadow-xl: 0px 4px 8px 0px hsl(0 0% 0% / 0.2), 0px 8px 10px -1px hsl(0 0% 0% / 0.2);
    --shadow-2xl: 0px 4px 8px 0px hsl(0 0% 0% / 0.5);
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    html,
    body {
        overscroll-behavior: none;
        overscroll-behavior-y: none;
    }
    body {
        @apply bg-background text-foreground;
        letter-spacing: var(--tracking-normal);
    }
}

